# callout-vst

./: .gitignore  CMakeLists.txt  PROJECT_WISDOM.md  clean_git_history.ps1  insta_base_sync.py  push_docs_to_github.ps1
.github/workflows/: build.yml  insta_sync.yml  post.yml
Source/: KnobLookAndFeel.cpp  KnobLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: 00_MAP.md  01_workflow_standard.md  02_knob_implementation_skill.md  03_plugin_blueprint_template.md  04_agent_workflow.md  05_ai_common_protocol.md  07_gemma_local_assistant.md  08_memory_log.md  09_self_evaluation_harness.md  10_safety_guardrails.md  11_browser_context.md  12_post_mortem_report.md  13_architecture_proposal.md  14_api_minefield_map.md  gemini_context_refresher.md
scripts/: check_token_health.py  gemma_bridge.py  insta_base_sync.py  migrate_to_cdev.ps1  push_to_github.ps1
